# a4wd2

./: .clang-format  .format-all.sh  .gitmodules  CMakeLists.txt  LICENSE  README.rst  package.xml
arduino-cmake/cmake/Platform/: Arduino.cmake
cmake/Hunter/: config.cmake
config/: reactive_controller_config.ini
deb/: postinst  prerm
launch/: a4wd2.launch  autonomy.launch  keyboard_control.launch
msg/: control_command.msg
rviz/: lynxmotion.rviz
src/apps/marg_viz/: CMakeLists.txt  marg_viz.cpp
src/apps/marg_viz/cmake/Hunter/: config.cmake
src/config/: CMakeLists.txt  config.cpp
src/config/a4wd2/motor_controller/: init.cpp
src/config/include/a4wd2/: config.h
src/config/include/a4wd2/motor_controller/: init.h
src/firmware/arduino/: CMakeLists.txt  MPU9250.cpp  MPU9250.h  arduino_sensor_processor.cpp  mpu9250.cpp  srf08_serial.cpp
src/firmware/arduino/I2Cdev/: I2Cdev.cpp  I2Cdev.h
src/firmware/arduino/arduino-cmake/cmake/: ArduinoToolchain.cmake
src/firmware/arduino/arduino-cmake/cmake/Platform/: Arduino.cmake
src/firmware/arduino/include/mpu9250/: mpu9250.hpp  registers.hpp  scale_conversions.hpp  timed_mpu9250.hpp  types.hpp
src/firmware/arduino/include/srf08/: srf08.hpp
src/firmware/arduino/test/: test_json.py
src/incubator/random_forager/: CMakeLists.txt  random_forager.cpp
src/incubator/random_forager/cmake/Hunter/: config.cmake
src/incubator/random_forager/config/: random_forager.json
src/reactive_controller/: CMakeLists.txt  laser_scan_provider.cpp  laser_scan_provider.h  mrpt_nav_interface.cpp  mrpt_nav_interface.h  odometry_provider.cpp  odometry_provider.h  reactive_controller.cpp
src/ros_controller/: CMakeLists.txt  key_controller.cpp  ros_controller.cpp
src/ros_dummy/: CMakeLists.txt  package.xml
src/sensor_publisher/: CMakeLists.txt  sensor_publisher.cpp
src/sensor_publisher/launch/: sensor_publisher.launch
src/sensor_reader/: CMakeLists.txt  mpu9250.cpp  sensor_reader.cpp  srf08.cpp  string_line_reader.cpp
src/sensor_reader/include/sensor_reader/: link_interfaces.hpp  mpu9250.hpp  sensor.hpp  sensor_reader.hpp  srf08.hpp  string_line_reader.hpp
src/sensor_reader/test/: test_sensor_reader.cpp
src/sensor_reader/test/integration/: serial_reader.cpp
src/sensor_reader/test/unit/: test_mpu9250.cpp  test_sensor_reader.cpp
src/toolkit/: CMakeLists.txt  MotorController.cpp  odometry_provider.cpp  waypoint_generators.cpp
src/toolkit/include/a4wd2/toolkit/: MotorController.h  odometry_provider.h  waypoint_generators.h
src/visualisation/: CMakeLists.txt  a4wd2_visualisation.cpp
system/: CMakeLists.txt
system/etc/update-motd.d/: 01-print-rover  rover-ascii.txt
system/lib/systemd/system/: a4wd2-roscore.service
system/opt/a4wd2/: a4wd2_env.sh
tools/env/: a4wd2.sh
udev-rules/: 99-a4wd2.rules
urdf/: lynxmotion.urdf
