<package format="2">
    <name>a4wd2</name>
    <version>0.0.1</version>
    <description>
        Lynxmotion A4WD2 robot
    </description>
    <maintainer email="lsolanka@gmail.com">Lukas Solanka</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
