cmake_minimum_required(VERSION 3.0)
project(ros_dummy VERSION)

find_package(catkin REQUIRED)

catkin_package()

set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "all")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Dummy ROS package to install setup.bash")
set(CPACK_PACKAGE_NAME "${PROJECT_NAME}")
set(CPACK_PACKAGE_CONTACT "lsolanka AT gmail.com")
set(CPACK_PACKAGE_VENDOR "Lukas Solanka")
set(CPACK_PACKAGE_VERSION ${${PROJECT_NAME}_VERSION})
set(CPACK_PACKAGE_FILE_NAME
    "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}")
set(CPACK_PACKAGING_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
set(CPACK_GENERATOR "DEB")

include(CPack)
